Function chooseDefender working
Currently works if luke selected as character
Needs code for other four characters
Changed .slected to .enemy

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class  = "choice luke" id = "luke">
             <div class = "char-text">Young Skywalker</div>
             <img class = "luke-pic" src="assets/images/luke.jpg">
-            <div class = "char-text">125</div>
+            <div class = "char-text">120</div>
         </div>
         <div class  = "choice han" id = "han">
             <div class = "char-text">Han Solo</div>
@@ -34,12 +34,12 @@
         <div class  = "choice boba" id = "boba">
             <div class = "char-text">Boba Fett</div>
             <img class = "boba-pic" src="assets/images/boba.jpg">
-            <div class = "char-text">115</div>
+            <div class = "char-text">110</div>
         </div>
         <div class  = "choice vader" id = "vader">
             <div class = "char-text">Darth Vader</div>
             <img class = "vader-pic" src="assets/images/darth-vader.jpg">
-            <div class = "char-text">140</div>
+            <div class = "char-text">130</div>
         </div>
     </div>
 
@@ -58,9 +58,12 @@
     <div>
         <button id = "attack">Attack</button>
     </div>
-
+    
+    <div>
+        <h3>Defender</h3>
+    </div>
     <div class = "defender-box">
-        <div class = "defender"></div>
+        <!-- <div class = "defender"></div> -->
     </div>
 
 
