Attack ckick function added, function in progress
assigns playerOneHealth and defenderHealth
assigns defenderAttack
updates health and Attack advancement on click
needs the rewrite health to HTML

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class  = "choice luke" id = "luke">
             <div class = "char-text">Young Skywalker</div>
             <img class = "luke-pic" src="assets/images/luke.jpg">
-            <div class = "char-text">120</div>
+            <div class = "char-text" id = "luke-health">120</div>
         </div>
         <div class  = "choice han" id = "han">
             <div class = "char-text">Han Solo</div>
